# movie-explorer

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  Makefile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: e97a5b3e8c7c_initial_schema.py
backend/app/: config.py  db.py  exception_handlers.py  exceptions.py  logging_config.py  main.py  middleware.py  seed.py
backend/app/data_services/: __init__.py  actor_service.py  base.py  director_service.py  genre_service.py  movie_service.py  review_service.py
backend/app/models/: __init__.py  actor.py  associations.py  director.py  genre.py  movie.py  review.py
backend/app/routers/: __init__.py  actors.py  directors.py  genres.py  health.py  movies.py  reviews.py
backend/app/schemas/: __init__.py  actor.py  common.py  director.py  envelope.py  genre.py  movie.py  review.py
backend/tests/: conftest.py  test_cache_headers.py  test_exception_handlers.py  test_health.py  test_models.py  test_request_id_mw.py  test_seed.py
backend/tests/data_services/: test_actor_service.py  test_base.py  test_director_service.py  test_genre_service.py  test_movie_service.py  test_review_service.py
backend/tests/routers/: test_actors.py  test_directors.py  test_genres.py  test_movies.py  test_reviews.py
frontend/: .env.example  .prettierignore  Dockerfile  eslint.config.js  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  (+2 more)
(+52 files in other folders)
